🐛 fix(slider): change slider to overflow scroll

--- a/src/app/components/product/product-slider/product-slider.component.scss
+++ b/src/app/components/product/product-slider/product-slider.component.scss
@@ -3,9 +3,32 @@
 @import '../../../../scss/mixins';
 
 .product-slider {
-  padding: 0 20px 20px;
+  @include d-flex(row, 12px);
+  overflow-y: auto;
+  padding: 5px 8px 20px;
+  cursor: grab;
 
-  .slider-card {
-    padding: 20px 10px;
+  @include mq(min-width, $small-card-max-mq) {
+    padding: 5px 10px 20px;
+  }
+
+  @include mq(min-width, $medium-card-max-mq) {
+    padding: 5px 20px 20px;
+  }
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    // @include prefix(transition, (opacity 0.3s));
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $grey5;
+    border-radius: 12px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    background: $ash2;
   }
 }
